--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
+<!--comment sample-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Viktorija Volegova | WDD 130</title>
+  <meta name="description" content="BYU-Idaho Web Fundamentals WDD130 Viktorija Volegova's Home page">
+  <meta name="author" content="Aleksejs Volegovs">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -24,10 +27,14 @@
       <br>I enjoy sports and exploring new places.
       <br>My hobby is drawing and sketching cartoon characters.
     </p>
-    <!--comment sample-->
   </main>
+  <aside>
+    <h2>Klaipeda</h2>
+    <img src="images/coastal-dunes.jpg" alt="Klaipeda Coastal dunes">
+    <p>Klaipeda is the 3rd largest city in Lithuania. It is a port city, and is surrounded by the Baltic Sea. It also has beautiful landscapes such as Sand Dunes.</p>
+  </aside>
   <footer>
-    <p>&copy; 2023 🇱🇹 Viktorija Volegova 🇱🇹 Lithuania 🇱🇹</p>
+    <p>&copy; 2023 🇱🇹 Viktorija Volegova 🇱🇹 Klaipeda, Lithuania 🇱🇹</p>
   </footer>
 </body>
 
