--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
   <aside>
     <h2>Klaipeda</h2>
-    <img src="images/coastal-dunes.jpg" alt="Klaipeda Coastal dunes">
+    <img src="images/coastal-dunes.jpg" alt="Klaipeda coastal dunes">
     <p>Klaipeda is the 3rd largest city in Lithuania. It is a port city, and is surrounded by the Baltic Sea. It also has beautiful landscapes such as Sand Dunes.</p>
   </aside>
   <footer>
