--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Viktorija Volegova | WDD 130</title>
   <meta name="description" content="BYU-Idaho Web Fundamentals WDD130 Viktorija Volegova's Home page">
-  <meta name="author" content="Aleksejs Volegovs">
+  <meta name="author" content="Viktorija Volegova">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
