--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -46,12 +46,12 @@
     <h2>Style Guide</h2>
       <h3>Color Palette</h3>
         <ul>
-          <li>primary-color</li>
-          <li>secondary-color</li>
-          <li>accent1-color</li>
-          <li>accent2-color</li>
+          <li>primary-color: #6D6875</li>
+          <li>secondary-color: #E5989B</li>
+          <li>accent1-color: #FFB4A2</li>
+          <li>accent2-color: #B5838D</li>
         </ul>
-        <p>Palette URL: <a href="https://coolors.co/" target="_blank">Coolors.co</a></p>
+        <p>Palette URL: <a href="https://coolors.co/palette/ffcdb2-ffb4a2-e5989b-b5838d-6d6875" target="_blank">https://coolors.co/palette/ffcdb2-ffb4a2-e5989b-b5838d-6d6875</a></p>
       <h3>Typography</h3>
         <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
