--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -53,12 +53,12 @@
         </ul>
         <p>Palette URL: <a href="https://coolors.co/palette/ffcdb2-ffb4a2-e5989b-b5838d-6d6875" target="_blank">https://coolors.co/palette/ffcdb2-ffb4a2-e5989b-b5838d-6d6875</a></p>
       <h3>Typography</h3>
-        <h4>Headings Example Font</h4>
-        <h4>Normal Text/Paragraph Example Font</h4>
+        <h4>Headings Example Font: 'Merriweather', serif</h4>
+        <h4>Normal Text/Paragraph Example Font: 'Source Sans Pro', sans-serif</h4>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, dolorem!
           </p>
-        <h4>Colored Callout Example Font</h4>
+        <h4>Colored Callout Example Font: 'Source Sans Pro', sans-serif</h4>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, incidunt?
           </p>
