--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>Rafting Site Plan</h1>
+    <h1>Rapids White Rafting Site Plan</h1>
     <div>Viktorija Volegova</div>
   </header>
   <main>
