--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,12 +21,13 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero-transparency-1024.png" alt="Large Rafting Hero image">
+            <img src="images/rafting54-1024.jpg" alt="Large Rafting Hero image">
             <h1>Rapids White Rafting</h1>
             <article>
                 <img src="images/rafting21-600.png" alt="Happy children and adults rafting">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsam, natus exercitationem illo pariatur dignissimos ullam doloremque explicabo non quae animi possimus aliquid harum fuga voluptate ipsa eveniet voluptas.
+                </p>
             </article>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsam, natus exercitationem illo pariatur dignissimos ullam doloremque explicabo non quae animi possimus aliquid harum fuga voluptate ipsa eveniet voluptas magnam.</p>
         </div>
         <section>
             <h2>History</h2>
