--- a/index.html
+++ b/index.html
@@ -20,32 +20,35 @@
       <a href="http://facebook.com" target="_blank">Facebook</a>
     </nav>
   </header>
-  <main>
-    <h1>Viktorija Volegova | WDD 130</h1>
-    <img src="images/profile.jpg" alt="Hello, my name is Viktorija Volegova" width="200">
-    <p>Hello!
-      <br>My name is Viktorija.
-      <br>I am originally from Lithuania.
-      <br>My hobby is drawing and sketching cartoon characters.
-      <br>I enjoy sports, exploring new places, and spending time with family and friends. 
-      <br>Especially, I enjoy fitness classes - various exercises from low to high-impact.
-      <br>I love exploring new countries as well as enjoying different hikes. 
-      <br>I enjoy an active lifestyle, such as going with family on bicycles or exploring new places by walking. 
-    </p>
-    <ul class="box intend">
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/stockholm-sweden-temple?lang=eng" target="_blank">Stockholm Sweden Temple</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">Logan Utah Temple</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/preston-england-temple?lang=eng" target="_blank">Preston England Temple</a></li>
-    </ul>
-  </main>
-  <aside class="box">
-    <h2>Klaipeda</h2>
-    <img src="images/coastal-dunes.jpg" alt="Klaipeda coastal dunes">
-    <p>Klaipeda is the 3rd largest city in Lithuania. It is a port city, and is surrounded by the Baltic Sea. It also has beautiful landscapes such as Sand Dunes.</p>
-  </aside>
+  <div class="grid">
+    <main>
+      <h1>Viktorija Volegova | WDD 130</h1>
+      <img src="images/profile.jpg" alt="Hello, my name is Viktorija Volegova" width="200">
+      <p>Hello!
+        <br>My name is Viktorija.
+        <br>I am originally from Lithuania.
+        <br>My hobby is drawing and sketching cartoon characters.
+        <br>I enjoy sports, exploring new places, and spending time with family and friends. 
+        <br>Especially, I enjoy fitness classes - various exercises from low to high-impact.
+        <br>I love exploring new countries as well as enjoying different hikes. 
+        <br>I enjoy an active lifestyle, such as going with family on bicycles or exploring new places by walking. 
+      </p>
+      <ul class="box intend">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/stockholm-sweden-temple?lang=eng" target="_blank">Stockholm Sweden Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">Logan Utah Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/preston-england-temple?lang=eng" target="_blank">Preston England Temple</a></li>
+      </ul>
+    </main>
+    <aside class="box">
+      <h2>Klaipeda</h2>
+      <img src="images/coastal-dunes.jpg" alt="Klaipeda coastal dunes">
+      <p>Klaipeda is the 3rd largest city in Lithuania. It is a port city, and is surrounded by the Baltic Sea. It also has beautiful landscapes such as Sand Dunes.
+      </p>
+    </aside>
+  </div>
   <footer>
     <p>&copy; 2023 🇱🇹 Viktorija Volegova 🇱🇹 Klaipeda, Lithuania 🇱🇹</p>
   </footer>
 </body>
-<!-- last modified 03 May 2023 -->
+<!-- last modified 11 May 2023 -->
 </html>
