--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="images/crossedoars.jpeg" alt="Rafting Site Logo">
+        <img src="images/crossedoars.jpeg" alt="Rafting Site Logo" width="150">
         <nav>
             <a href="#index.html">Home</a>
             <a href="#about.html">About Us</a>
@@ -25,13 +25,22 @@
             <h1>Rapids White Rafting</h1>
             <article>
                 <img src="images/rafting21-600.png" alt="Happy children and adults rafting">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsam, natus exercitationem illo pariatur dignissimos ullam doloremque explicabo non quae animi possimus aliquid harum fuga voluptate ipsa eveniet voluptas.
+                <p>
+                    Our purpose is to make all different ages costumers happy, to provide training in water rafting as well as give satisfaction.
+                    <br>
+                    <br>Our mission to feel all welcome and give them best experience in water rafting.Through social interactions to teach them technique of rafting as well as build confidence in this kind of sport.
                 </p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt consequatur temporibus omnis facilis magni distinctio modi laudantium et ratione dolorem tempore minima eius nemo reprehenderit, dolorum laborum sequi eligendi vitae.</p>
+                <p>
+                    Our company established in 2009. It started as a family business. 
+                    <br>In 2012 it grew bigger involving people from outside to join and built a water rafting business.
+                    <br>In 2014 we reached a new milestone by opening a much larger resort for customers to enjoy and gave instructions on rafting. 
+                    <br>In 2022 we opened it for all ages customers to enjoy our resort. We offered not only rafting but also, different entertainment venues to enjoy for toddlers and younger children.
+                    <br>Today, we have to offer on our site restaurants, cafes, and playing areas for toddlers and babies. Small pools to enjoy in the water. As well as inflatables and all sorts of fun for families to enjoy.
+                </p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
