--- a/wwr/about.html
+++ b/wwr/about.html
@@ -42,13 +42,28 @@
                     <br>Today, we have to offer on our site restaurants, cafes, and playing areas for toddlers and babies. Small pools to enjoy in the water. As well as inflatables and all sorts of fun for families to enjoy.
                 </p>
         </section>
-        <section>
+        <section class="five_pictures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/deso-2kayaks.jpg" alt="two kayaks on the river">
-            <img src="images/rafting53-600.jpg" alt="group of people rafting">
-            <img src="images/elves-chasm-landscape.jpg" alt="river in the canyon">
-            <img src="images/deercreek-portrait.jpg" alt="Deer Creek waterfall">
-            <img src="images/rafting2-600.jpg" alt="white river rafting">
+            <figure>
+                <img src="images/deso-2kayaks.jpg" alt="two kayaks on the river">
+                <figcaption>Enjoy the ride</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting53-600.jpg" alt="group of people rafting">
+                <figcaption>Paddle adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/elves-chasm-landscape.jpg" alt="river in the canyon">
+                <figcaption>Adventure awaits at the cave</figcaption>
+            </figure>
+            <figure>
+                <img src="images/deercreek-portrait.jpg" alt="Deer Creek waterfall">
+                <figcaption>Take a break at Waterfall</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting2-600.jpg" alt="white river rafting">
+                <figcaption>Relax and enjoy the ride</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
