--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +14,11 @@
         <h1>WDD 130 | Viktorija Volegova | HTML Form - User Poll</h1>
     </header>
     <main>
-        <form action="">
+        <form>
             <fieldset>
                 <legend>Contact Information</legend>
                 <div class="form-item column2"><label for="fullname">Full Name: <input type="text" id="fullname" name="fullname"></label></div>
-                <div class="form-item column2"><label for="email">Email: <input type="email" id="useremail" name="useremail"></label></div>
+                <div class="form-item column2"><label for="useremail">Email: <input type="email" id="useremail" name="useremail"></label></div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
@@ -37,7 +37,7 @@
                 <div class="form-item column1">
                     <label for="pet">Do you have a household pet?<input type="checkbox" id="pet" name="pet"></label>
                 </div>
-                <label for="feedback">List the places you have lived:<textarea name="feedback" id="feedback" cols="30" rows="10" placeholder="Florida, Netherlands, Mali"></textarea></label>
+                <label for="feedback">List the places you have lived:<textarea name="feedback" id="feedback" cols="50" rows="5" placeholder="Florida, Netherlands, Mali"></textarea></label>
             </fieldset>
             <button type="submit">Submit Poll</button>
         </form>
