--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Quiz</title>
+    <title>WDD 130 | HTML and CSS Quiz</title>
     <meta name="description" content="BYU-Idaho Web Fundamentals WDD130 Viktorija Volegova's Quiz Assignment">
   <meta name="author" content="Viktorija Volegova">
   <link rel="stylesheet" href="styles/quiz.css">
@@ -29,6 +29,8 @@
                         </select>
                     </label>
                 </div>
+
+                <div class="form-item"><label for="q4">1. What is the opacity given this declaration? <input type="number" id="q4" name="q4"></label></div>
             </fieldset>
             <button type="submit">Submit Quiz</button>
         </form>
