--- a/quiz.html
+++ b/quiz.html
@@ -30,7 +30,7 @@
                     </label>
                 </div>
 
-                <div class="form-item"><label for="q4">1. What is the opacity given this declaration? <input type="number" id="q4" name="q4"></label></div>
+                <div class="form-item"><label for="q4">4. What is the opacity given this declaration? <img src="images/screenshot-rgba.png" alt="rgba(0, 0, 0, 1)"><input type="number" id="q4" name="q4"></label></div>
             </fieldset>
             <button type="submit">Submit Quiz</button>
         </form>
