--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
                 <div class="form-item">
                     <label for="q3">3. Where to give content description in HTML? 
                         <select name="q3" id="q3">
+                            <option selected disabled>Choose one ...</option>
                             <option value="header">header</option>
                             <option value="head">head</option>
                             <option value="footer">footer</option>
