--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>WDD 130 | Viktorija Volegova | Basic HTML and CSS Quiz</h1>
+        <h1>Basic HTML and CSS Quiz</h1>
     </header>
     <main>
         <form>
@@ -23,7 +23,7 @@
                 <div class="form-item">
                     <label for="q3">3. Where to give content description in HTML? 
                         <select name="q3" id="q3">
-                            <option selected disabled>Choose one ...</option>
+                            <option value="" selected disabled>Choose one ...</option>
                             <option value="header">header</option>
                             <option value="head">head</option>
                             <option value="footer">footer</option>
