--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/rafting.css">
-    <meta name="description" content="Rapids White Rafting about page">
+    <meta name="description" content="Rapids White Rafting About page">
     <meta name="author" content="Viktorija Volegova">
     <title>Rapids White Rafting | About Us</title>
 </head>
@@ -42,7 +42,7 @@
                     <br>Today, we have to offer on our site restaurants, cafes, and playing areas for toddlers and babies. Small pools to enjoy in the water. As well as inflatables and all sorts of fun for families to enjoy.
                 </p>
         </section>
-        <section class="five_pictures">
+        <section class="block_pictures">
             <h2>Adventure Awaits You!</h2>
             <figure>
                 <img src="images/deso-2kayaks.jpg" alt="two kayaks on the river">
