--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -56,6 +56,29 @@
 
         <section class="contact_form">
             <h2>Send us a message:</h2>
+            <form>
+                <fieldset>
+                    <div class="form-item"><label for="name">Name: <input type="text" id="name" name="name"></label></div>
+                <div class="form-item"><label for="email">Email: <input type="email" id="email" name="email"></label></div>
+                </fieldset>
+                
+                <fieldset class="radio">
+
+                </fieldset>
+
+                <fieldset>
+                    <div>
+                        <label for="message">Message:<textarea name="message" id="message" cols="50" rows="5" placeholder="message"></textarea></label>
+                    </div>
+                </fieldset>
+
+                <fieldset>
+                    <div class="form-item checkbox">
+                        <label for="subscribe">Please subscribe me to the monthly newsletter <input type="checkbox" id="subscribe" name="subscribe"></label>
+                    </div>
+                </fieldset>
+                <button type="submit">Send message</button>
+            </form>
         </section>
     </main>
     <footer>
