--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -63,7 +63,13 @@
                 </fieldset>
                 
                 <fieldset class="radio">
+                    <legend>Purpose of the message:</legend>
 
+                        <div>
+                            <label for="general">General Inquiry<input type="radio" name="purpose" id="general"></label>
+                            <label for="reservation">Reservation Question<input type="radio" name="purpose" id="reservation"></label>
+                            <label for="website">Website Suggestion<input type="radio" name="purpose" id="website"></label>
+                        </div>
                 </fieldset>
 
                 <fieldset>
