--- a/wwr/about.html
+++ b/wwr/about.html
@@ -67,7 +67,10 @@
         </section>
     </main>
     <footer>
+        <a href=""></a>
+
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
+        
         <nav class="sociallinks">
             <a href="https://www.facebook.com/">
                 <img src="images/facebook-icon-nav.png" alt="Facebook">
