--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,8 +22,7 @@
     <main>
         <section class="hero">
             <h1>Contact Us</h1>
-            <!-- <h2>WE'RE HERE TO HELP</h2> -->
-            <p>WE'RE HERE TO HELP</p>
+            <p></p>
         </section>
 
         <section class="contacts">
@@ -34,12 +33,11 @@
                     <br>Email: <a href="mailto:">contact@rafting.com</a></p>    
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29241.917458109376!2d22.965781353938816!3d55.09143093040714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1684502611393!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29241.917458109376!2d22.965781353938816!3d55.09143093040714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1684502611393!5m2!1sen!2suk" width="480" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div> 
         </section>
         <section class="block_pictures">
-            <!-- <h2>We're here to help</h2> -->
-            <h2>Our team</h2>
+            <h2>We're here to help</h2>
             <figure>
                 <img src="images/profile-garry-smith.jpg" alt="customer service manager garry smith" height="300">
                 <figcaption>Garry - Customer service manager</figcaption>
@@ -62,10 +60,10 @@
                 <div class="form-item"><label for="email">Email: <input type="email" id="email" name="email"></label></div>
                 </fieldset>
                 
-                <fieldset class="radio">
+                <fieldset>
                     <legend>Purpose of the message:</legend>
 
-                        <div>
+                        <div class="form-item radio">
                             <label for="general">General Inquiry<input type="radio" name="purpose" id="general"></label>
                             <label for="reservation">Reservation Question<input type="radio" name="purpose" id="reservation"></label>
                             <label for="website">Website Suggestion<input type="radio" name="purpose" id="website"></label>
@@ -79,7 +77,7 @@
                 </fieldset>
 
                 <fieldset>
-                    <div class="form-item checkbox">
+                    <div class="form-item">
                         <label for="subscribe">Please subscribe me to the monthly newsletter <input type="checkbox" id="subscribe" name="subscribe"></label>
                     </div>
                 </fieldset>
@@ -88,9 +86,6 @@
         </section>
     </main>
     <footer>
-        <!-- <nav class="sociallinks">
-            <a href="images/wwr-wireframe-contactus.png">Wireframe: Contact Us page</a>
-        </nav> -->
         <a href="images/wwr-wireframe-contactus.png">Wireframe for the Contact Us page</a>
         
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
