--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,23 +45,23 @@
         <section class="block_pictures">
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="images/deso-2kayaks.jpg" alt="two kayaks on the river">
+                <img src="images/deso-2kayaks.jpg" alt="two kayaks on the river" width="190">
                 <figcaption>Enjoy the ride</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting53-600.jpg" alt="group of people rafting">
+                <img src="images/rafting53-600.jpg" alt="group of people rafting" width="190">
                 <figcaption>Paddle adventure</figcaption>
             </figure>
             <figure>
-                <img src="images/elves-chasm-landscape.jpg" alt="river in the canyon">
+                <img src="images/elves-chasm-landscape.jpg" alt="river in the canyon" width="190">
                 <figcaption>Adventure awaits at the cave</figcaption>
             </figure>
             <figure>
-                <img src="images/deercreek-portrait.jpg" alt="Deer Creek waterfall">
+                <img src="images/deercreek-portrait.jpg" alt="Deer Creek waterfall" width="190">
                 <figcaption>Take a break at Waterfall</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting2-600.jpg" alt="white river rafting">
+                <img src="images/rafting2-600.jpg" alt="white river rafting" width="190">
                 <figcaption>Relax and enjoy the ride</figcaption>
             </figure>
         </section>
