--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -39,16 +39,20 @@
         <section class="block_pictures">
             <h2>We're here to help</h2>
             <figure>
-                <img src="images/profile-garry-smith.jpg" alt="customer service manager garry smith" height="300">
-                <figcaption>Garry - Customer service manager</figcaption>
+                <div><!-- placeholder --></div>
+                <figcaption></figcaption>
             </figure>
             <figure>
-                <img src="images/profile-lana-walker.jpg" alt="customer service team leader lana walker" height="300">
-                <figcaption>Lana - Customer service team leader</figcaption>
+                <img src="images/web-garry-smith.jpg" alt="customer service manager garry smith">
+                <figcaption>Garry</figcaption>
             </figure>
             <figure>
-                <img src="images/profile-thomas-white.jpg" alt="customer service support thomas white" height="300">
-                <figcaption>Thomas - Customer service support</figcaption>
+                <img src="images/web-lana-walker.jpg" alt="customer service team leader lana walker">
+                <figcaption>Lana</figcaption>
+            </figure>
+            <figure>
+                <img src="images/web-thomas-white.jpg" alt="customer service support thomas white">
+                <figcaption>Thomas</figcaption>
             </figure>
         </section>
 
@@ -86,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <a href="images/wwr-wireframe-contactus.png">Wireframe for the Contact Us page</a>
+        <a href="https://app.moqups.com/HpszhLGnag4P5b4rrgRfykl4o6ZVPYyN/view/page/ad64222d5">Wireframe for the Contact Us page</a>
         
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
 
