--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <meta name="description" content="Rapids White Rafting About page">
     <meta name="author" content="Viktorija Volegova">
-    <title>Rapids White Rafting | About Us</title>
+    <title>About Us | Rapids White Rafting</title>
 </head>
 <body>
     <header>
