--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <meta name="description" content="Rapids White Rafting Contact page">
     <meta name="author" content="Viktorija Volegova">
-    <title>Rapids White Rafting | Contact Us</title>
+    <title>Contact Us | Rapids White Rafting</title>
 </head>
 <body>
     <header>
@@ -28,7 +28,8 @@
         <section class="contacts">
             <div>
                 <h2>Address:</h2>
-                    <p>Rapids White Rafting, Nemunas
+                    <p>Rapids White Rafting
+                       <br>74465 Siline, Nemunas, Lithuania
                     <br>Phone: +370 (6) 123-456-789
                     <br>Email: <a href="mailto:">contact@rafting.com</a></p>    
             </div>
@@ -43,20 +44,20 @@
                 <figcaption></figcaption>
             </figure>
             <figure>
-                <img src="images/web-garry-smith.jpg" alt="customer service manager garry smith">
+                <img src="images/web-garry-smith.jpg" alt="garry smith">
                 <figcaption>Garry</figcaption>
             </figure>
             <figure>
-                <img src="images/web-lana-walker.jpg" alt="customer service team leader lana walker">
+                <img src="images/web-lana-walker.jpg" alt="lana walker">
                 <figcaption>Lana</figcaption>
             </figure>
             <figure>
-                <img src="images/web-thomas-white.jpg" alt="customer service support thomas white">
+                <img src="images/web-thomas-white.jpg" alt="thomas white">
                 <figcaption>Thomas</figcaption>
             </figure>
         </section>
 
-        <section class="contact_form">
+        <section>
             <h2>Send us a message:</h2>
             <form>
                 <fieldset>
@@ -90,7 +91,7 @@
         </section>
     </main>
     <footer>
-        <a href="https://app.moqups.com/HpszhLGnag4P5b4rrgRfykl4o6ZVPYyN/view/page/ad64222d5">Wireframe for the Contact Us page</a>
+        <a href="images/wireframe-wwr-contactus.jpg">Wireframe for the Contact Us page</a>
         
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
 
