--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,9 +13,9 @@
     <header>
         <img src="images/crossedoars.jpeg" alt="Rafting Site Logo" width="150">
         <nav>
-            <a href="#index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#about.html">About Us</a>
-            <a href="#trips.html">Trips</a>
+            <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
@@ -42,7 +42,7 @@
                     <br>Today, we have to offer on our site restaurants, cafes, and playing areas for toddlers and babies. Small pools to enjoy in the water. As well as inflatables and all sorts of fun for families to enjoy.
                 </p>
         </section>
-        <section class="block_pictures">
+        <section class="block-pictures">
             <h2>Adventure Awaits You!</h2>
             <figure>
                 <img src="images/deso-2kayaks.jpg" alt="two kayaks on the river" width="190">
