--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -29,7 +29,7 @@
           professionals. They like sports and socialising with friends. They are very active participants who would be interested in different sport activities.
           <br><a href="https://segments.sportengland.org/pdf/penPortrait-1.pdf">Source: https://segments.sportengland.org/pdf/penPortrait-1.pdf</a>
           <br>
-          <br>Families with kids. Their age range from 33-45. Part time workers or full time workers. Also, stay at home mums with kids (married). They work in call centres, salesmens and etc. They lead active life style with children.Families like sport and doing different activities, such as aerobic classes, swimming and etc. These people would be interested in different activities.
+          <br>Families with kids. Their age range from 33-45. Part time workers or full time workers. Also, stay at home mums with kids (married). They work in call centres, salesmens and etc. They lead active life style with children. Families like sport and doing different activities, such as aerobic classes, swimming and etc. These people would be interested in different activities.
           <br><a href="https://segments.sportengland.org/pdf/penPortrait-8.pdf">Source: https://segments.sportengland.org/pdf/penPortrait-8.pdf</a>
           <br>
           <br>2. What do they want?
@@ -64,9 +64,9 @@
           </p>
       <h3>Navigation</h3>
         <nav>
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="about.html">About Us</a>
-          <a href="#">Trips</a>
+          <a href="trips.html">Trips</a>
           <a href="contact.html">Contact Us</a>
         </nav>
     <h2>Wireframes</h2>
