--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,9 +13,9 @@
     <header>
         <img src="images/crossedoars.jpeg" alt="Rafting Site Logo" width="150">
         <nav>
-            <a href="#index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
-            <a href="#trips.html">Trips</a>
+            <a href="trips.html">Trips</a>
             <a href="#contact.html">Contact Us</a>
         </nav>
     </header>
@@ -37,7 +37,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d29241.917458109376!2d22.965781353938816!3d55.09143093040714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1684502611393!5m2!1sen!2suk" width="480" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div> 
         </section>
-        <section class="block_pictures">
+        <section class="block-pictures">
             <h2>We're here to help</h2>
             <figure>
                 <div><!-- placeholder --></div>
