--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -91,7 +91,7 @@
         </section>
     </main>
     <footer>
-        <a href="images/wireframe-wwr-contactus.jpg">Wireframe for the Contact Us page</a>
+        <a href="images/wireframe-wwr-contactus.jpg">Wireframe for the page</a>
         
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
 
