--- a/wwr/index.html
+++ b/wwr/index.html
@@ -69,8 +69,8 @@
         </div>
 
     </main>
-    <footer> <!-- ADD Wireframe -->
-        <a href="images/wireframe-wwr-contactus.jpg">Wireframe for the Contact Us page</a>
+    <footer> <!-- DONE ADD Wireframe -->
+        <a href="images/wireframe-wwr-index.jpg">Wireframe for the page</a>
         
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
 
