--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,7 +24,7 @@
             <img src="images/rafting54-1024.jpg" alt="Large Rafting Hero image">
             <h1>Explore Our Trips</h1>
             <article class="cta">
-                <button onclick="window.location.href='trips.html';">Contact Us</button>
+                <button onclick="window.location.href='contact.html';">Contact Us</button>
                 
                 <p>Get in touch for more information and offers with us</p>
             </article>
@@ -66,7 +66,7 @@
                 <h2>Paddle adventure</h2>
 
                 <figure>
-                    <img src="images/rafting53-600.jpg" alt="group of people rafting">
+                    <img src="images/deso-boats.jpg" alt="group of people kayaking">
                     <figcaption>Find what suits you best</figcaption>
                 </figure>
 
@@ -172,8 +172,8 @@
             </tbody>
           </table>
     </main>
-    <footer> <!-- ADD Wireframe -->
-        <a href="images/wireframe-wwr-contactus.jpg">Wireframe for the Contact Us page</a>
+    <footer> <!-- DONE ADD Wireframe -->
+        <a href="images/wireframe-wwr-trips.jpg">Wireframe for the page</a>
         
         <p>&copy; 2023 | Rapids White Rafting | Viktorija Volegova</p>
 
